--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     </string-array>
 
     <string name="content">The layout for the each view item is defined in an XML layout file, as usual. In this case, the app has a text_row_item.xml file like this:</string>
+    <string name="title_activity_main6">MainActivity6</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
